Feat. New Array Controler and Word class extended to all Activities except main.
Feat. Refactored layout. One layout for all activities except main.

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,11 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:id="@+id/miwok"/>
+        android:id="@+id/miwok_translation"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/english"/>
+        android:id="@+id/default_translation"/>
 
 </LinearLayout>
