--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/word_box">
+        android:id="@+id/word_box"
+        >
 
         <ImageView
             android:layout_width="@dimen/image_item_width"
@@ -19,7 +20,7 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/text_container"
             android:orientation="vertical">
@@ -27,34 +28,51 @@
             <!--android:background="@color/category_numbers"-->
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="bottom"
+                android:text="Prueba"
                 style="@style/MiwokText"
                 android:id="@+id/miwok_translation"
                 />
 
             <!--android:background="@color/category_numbers"-->
 
+
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:gravity="top"
+                android:layout_gravity="right"
+                android:text="Hola"
                 style="@style/ListItem"
                 android:id="@+id/default_translation"/>
 
             <!--android:background="@color/category_numbers"-->
 
 
+
+
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="@dimen/image_item_width"
+        <!-- Gives a problem with background color -->
+
+        <View
+            android:layout_width="0dp"
             android:layout_height="@dimen/list_item_height"
+            android:layout_weight="1"
+            android:id="@+id/blank_view"
+            />
+
+
+        <ImageView
+            android:layout_width="22dp"
+            android:layout_height="@dimen/list_item_height"
+            android:layout_gravity="right"
             android:src="@mipmap/play_arrow"
-            android:id="@+id/play_arrow"/>
+            android:id="@+id/play_arrow"
+            />
 
 
     </LinearLayout>
